[package]
name = "boow"
version = "0.1.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "`Borrow Or oWned` smart pointer. Alternative to Cow."
license = "MIT"
readme = "README.md"
keywords = ["bow", "borrow", "owned", "pointer", "cow"]
categories = ["no-std", "rust-patterns", "memory-management"]
documentation = "http://boussejra.com/rust-doc/boow/boow"
repository = "https://github.com/malikolivier/boow"

[dependencies]
cfg-if = "0.1"

[features]
default = ["std"]
std = []
